--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  display: flex;
 }
 
 .App-logo {
@@ -19,4 +20,14 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.leaflet-container {
+  height: 100vh;
+  width: 100vw;
+}
+
+.stationsListing {
+  height: 100vh;
+  width: 50vw;
 }
