--- a/src/containers/StationsListing/StationsListing.module.css
+++ b/src/containers/StationsListing/StationsListing.module.css
@@ -5,6 +5,7 @@
   padding: 2%;
   display: flex;
   flex-direction: column;
+  visibility: visible;
 }
 
 .title {
@@ -30,4 +31,23 @@
 }
 
 .stationsListings {
+}
+
+.chargingScene {
+  width: 34vw;
+  height: 100%;
+  /*    justify-content: center; */
+  padding: 2%;
+  display: flex;
+  flex-direction: column;
+  visibility: visible;
+}
+
+.chargingTitle {
+  font-size: 22px;
+}
+.chargingAddress {
+}
+
+.authButtons {
 }
