Changing to register screen working

--- a/src/containers/StationsListing/StationsListing.module.css
+++ b/src/containers/StationsListing/StationsListing.module.css
@@ -50,4 +50,21 @@
 }
 
 .authButtons {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.authButton {
+  margin: 2%;
+  height: 25px;
+  width: auto;
+}
+
+.registerScene {
+  display: flex;
+  flex-direction: column;
+}
+
+.registerModule {
+  display: flex;
 }
